# serializer version: 1
# name: test_data_color_autocolor_text_false[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_autocolor_text_false[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_colorbrewer_snap
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #000000; background-color: #f7fcf5;" class="gt_row gt_right">1</td>
    <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">10</td>
    <td class="gt_row gt_left">one</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #c7e9c0;" class="gt_row gt_right">2</td>
    <td style="color: #000000; background-color: #238b45;" class="gt_row gt_right">9</td>
    <td class="gt_row gt_left">two</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #73c476;" class="gt_row gt_right">3</td>
    <td style="color: #000000; background-color: #73c476;" class="gt_row gt_right">8</td>
    <td class="gt_row gt_left">three</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #238b45;" class="gt_row gt_right">4</td>
    <td style="color: #000000; background-color: #c7e9c0;" class="gt_row gt_right">7</td>
    <td class="gt_row gt_left">four</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #00441b;" class="gt_row gt_right">5</td>
    <td style="color: #000000; background-color: #f7fcf5;" class="gt_row gt_right">6</td>
    <td class="gt_row gt_left">five</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_reverse_snap[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_reverse_snap[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_snap[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #f80400;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_domain_na_color_snap[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #f80400;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_overlapping_domain[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #673598;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_overlapping_domain[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #673598;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_palette_snap[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #fe0100;" class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ec0a00;" class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_palette_snap[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #fe0100;" class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ec0a00;" class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_df_snap
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">10</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">one</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_right">2</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_right">9</td>
    <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_left">two</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">3</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">8</td>
    <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_left">three</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_exibble_snap[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #060203;" class="gt_row gt_right">2.222</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #742b38;" class="gt_row gt_right">33.33</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">coconut</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">444.4</td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_left">durian</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_exibble_snap[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #060203;" class="gt_row gt_right">2.222</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #742b38;" class="gt_row gt_right">33.33</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">coconut</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">444.4</td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_left">durian</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_subset_domain[pandas]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_subset_domain[polars]
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_viridis_snap
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #440154;" class="gt_row gt_right">1</td>
    <td style="color: #000000; background-color: #fde725;" class="gt_row gt_right">10</td>
    <td class="gt_row gt_left">one</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #3b518a;" class="gt_row gt_right">2</td>
    <td style="color: #000000; background-color: #5fc761;" class="gt_row gt_right">9</td>
    <td class="gt_row gt_left">two</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #22908b;" class="gt_row gt_right">3</td>
    <td style="color: #000000; background-color: #22908b;" class="gt_row gt_right">8</td>
    <td class="gt_row gt_left">three</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #5fc761;" class="gt_row gt_right">4</td>
    <td style="color: #FFFFFF; background-color: #3b518a;" class="gt_row gt_right">7</td>
    <td class="gt_row gt_left">four</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #fde725;" class="gt_row gt_right">5</td>
    <td style="color: #FFFFFF; background-color: #440154;" class="gt_row gt_right">6</td>
    <td class="gt_row gt_left">five</td>
  </tr>
  </tbody>
  '''
# ---
